@@ -4,3 +4,4 @@
 
 from .remove_chartchunk import remove_borders
 from .scatter import category_scatter
+from .stacked_barplot import stacked_barplot
